--- a/src/app/StockApp.css
+++ b/src/app/StockApp.css
@@ -2,12 +2,16 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 body {
   background-color: #f7fafc;
   color: #1a202c;
   font-family: Arial, sans-serif;
+  margin: 0;
 }
 
 .stock-app {
@@ -17,7 +21,6 @@ body {
   align-items: center;
   padding: 24px;
   min-height: 100vh;
-  justify-content: center;
   overflow: hidden;
 }
 
@@ -26,6 +29,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 header img {
@@ -50,6 +54,7 @@ section {
   border-radius: 16px;
   padding: 24px;
   margin-bottom: 24px;
+  text-align: center;
 }
 
 #ticker-input-form {
@@ -66,12 +71,15 @@ label {
 }
 
 .input-container {
+  justify-content: center;
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
 #ticker-input {
+  width: 100%;
+  max-width: 100px;
   flex-grow: 1;
   padding: 8px 16px;
   border: 1px solid #cbd5e0;
@@ -158,7 +166,11 @@ footer {
 }
 
 .report-section {
-  padding-top: 6;
-  padding-bottom: 6;
-  font-size: 12px;
+  min-height: 100px;
+  width: 100%;
+  max-width: 400px;
+  text-align: left;
+  overflow-y: auto;
+  word-wrap: break-word;
+  padding-top: 10px;
 }
