--- a/src/components/StartButton/StartButton.css
+++ b/src/components/StartButton/StartButton.css
@@ -1,9 +1,9 @@
 .start-page {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .start-page-btn {
@@ -13,7 +13,7 @@
   border: none;
   border-radius: 1rem;
   font-family: "Exo 2", sans-serif;
-  font-size: 7rem;
+  font-size: 6rem;
   font-weight: bold;
   color: #eee;
   text-transform: uppercase;
