--- a/src/app/StockApp.css
+++ b/src/app/StockApp.css
@@ -1,10 +1,11 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  padding-top: 20px;
 }
 
 body {
@@ -15,13 +16,13 @@ body {
 }
 
 .stock-app {
-  margin-top: 12;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 12px;
+  padding: 24px;
+  width: 100vw;
   min-height: 100vh;
-  overflow: hidden;
+  padding-top: 30px;
 }
 
 header {
@@ -30,6 +31,7 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
 }
 
 header img {
